package com.cafeteriamanagement.model.enums;

public enum Allergen {
    NONE,
    GLUTEN_CONTAINING_CEREALS,
    NUTS,
    CRUSTACEANS,
    CELERY,
    EGGS,
    MUSTARD,
    FISH,
    SESAME_SEEDS,
    PEANUTS,
    SULPHITES,
    SOYBEANS,
    LUPINS,
    MILK_AND_MILK_PRODUCTS,
    MOLLUSCS
}