package com.cafeteriamanagement.model.enums;

public enum UserType {
    EMPLOYEE,
    CLIENT,
    ADMIN
}