@startuml Domain_Model_Coffeetaria

!theme plain
left to right direction
skinparam linetype ortho
skinparam shadowing false
skinparam classAttributeIconSize 0

skinparam class {
    BackgroundColor #FAFAFA
    BorderColor #444444
    HeaderBackgroundColor #2C3E50
    HeaderFontColor #FFFFFF
    FontSize 13
}

skinparam arrowColor #444444

title Domain Model - Coffeetaria

' =========================
' USERS
' =========================

class User {
    + id : Long
    + externalId : String
    + username : String
    + passwordHash : String
    + type : UserType
    + balance : BigDecimal
}

enum UserType {
    EMPLOYEE
    CLIENT
    ADMIN
}

User *-- UserType : has

' =========================
' MENU
' =========================

class Menu {
    + id : Long
    + externalId : String
    + date : LocalDate
}

class Dish {
    + id : Long
    + externalId : String
    + name : Name
    + price : BigDecimal
}

class Ingredient {
    + id : Long
    + externalId : String
    + name : Name
    + type : IngredientType
    + allergen : Allergen
}

class Name <<Value Object>> {
    + value : String
}

enum IngredientType {
    CEREALS_AND_DERIVATIVES
    TUBERS
    VEGETABLES
    FRUIT
    DAIRY_PRODUCTS
    MEAT
    FISH
    EGGS
    LEGUMES
    FATS_AND_OILS
}

enum Allergen {
    NONE
    GLUTEN_CONTAINING_CEREALS
    NUTS
    CRUSTACEANS
    CELERY
    EGGS
    MUSTARD
    FISH
    SESAME_SEEDS
    PEANUTS
    SULPHITES
    SOYBEANS
    LUPINS
    MILK_AND_MILK_PRODUCTS
    MOLLUSCS
}

Menu "1" o-- "0..1" Dish : meatDish
Menu "1" o-- "0..1" Dish : fishDish
Menu "1" o-- "0..1" Dish : vegetarianDish
Dish "0..*" -- "0..*" Ingredient : uses
Dish *-- Name : has name
Ingredient *-- Name : has name
Ingredient *-- IngredientType : has type
Ingredient *-- Allergen : has allergen

' =========================
' PURCHASES
' =========================

class Purchase {
    + id : Long
    + externalId : String
    + date : LocalDate
}

User "1" --> "0..*" Purchase : places
Purchase "0..*" --> "1" Dish : selects

note right of Menu
  date must be in the future
  meatDish must contain MEAT or EGGS
  fishDish must contain FISH
  vegetarianDish must not contain MEAT or FISH
end note

note bottom of Purchase
  date must be in the future
  client must have enough balance for dish.price
  EMPLOYEE users cannot make purchases
end note

@enduml
